# RestApiTask

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: db.sqlite3
app/api/: api.py  controllers.py  main.py  models.py  schemas.py  services.py
app/api/controllers/: oil_field.py  reading.py  sensor.py  well.py
app/api/data/: oil_fields.csv  production_readings.csv  sensors.csv  wells.csv
app/api/management/commands/: load_data.py
app/api/migrations/: 0001_initial.py
app/api/routers/: oil_fields.py  production_readings.py  sensors.py  wells.py
app/api/services/: oil_field.py  reading.py  sensor.py  well.py
app/app/: settings.py  urls.py
