[project]
name = "oilfield-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.9",
    "django-environ>=0.12.0",
    "django-ninja>=1.5.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.40.0",
]
